[package]
name = "math_quix"
version = "0.1.0"
authors = ["DevHyperCoder <arduinoleo88@gmail.com>"]
edition = "2018"
description = "A simple math quiz cli to practice basic arithmetic"
readme = "README.md"
repository = "https://github.com/DevHyperCoder/math_quix.git"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8.3"
